<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/menu_user_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:paddingTop="20dip"
            android:paddingBottom="20dip"
            android:background="@drawable/layout_item_selector" >

            <net.oschina.gitapp.widget.CircleImageView
                android:id="@+id/menu_user_info_userface"
                android:layout_width="72dip"
                android:layout_height="72dip"
                android:src="@drawable/mini_avatar" />

            <LinearLayout
                android:id="@+id/menu_user_info_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_alignTop="@id/menu_user_info_userface"
                android:layout_alignBottom="@id/menu_user_info_userface"
                android:layout_toRightOf="@id/menu_user_info_userface"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/menu_user_info_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_18" />
                
                <ImageView
                    android:id="@+id/user_info_gender"
                    android:layout_width="25dip"
                    android:layout_height="25dip"
                    android:layout_marginTop="10dip" />

            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/menu_user_info_login_tips_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_alignTop="@id/menu_user_info_userface"
                android:layout_alignBottom="@id/menu_user_info_userface"
                android:layout_toRightOf="@id/menu_user_info_userface"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/main_menu_login_tips"
                    android:textSize="@dimen/text_size_18" />

            </LinearLayout>
            
        </RelativeLayout>
        
        <include layout="@layout/horizontal_divider_view"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/menu_item_explore"
                style="@style/MenuItemLayoutStyle" >

                <TextView
                    style="@style/MenuItemTextViewStyle"
                    android:text="@string/fragment_menu_title_explore" />
            </LinearLayout>
            
            <include layout="@layout/horizontal_divider_view"/>

            <LinearLayout
                android:id="@+id/menu_item_myself"
                style="@style/MenuItemLayoutStyle" >

                <TextView
                    style="@style/MenuItemTextViewStyle"
                    android:text="@string/fragment_menu_title_myself" />
            </LinearLayout>
            
            <include layout="@layout/horizontal_divider_view"/>

            <LinearLayout
                android:id="@+id/menu_item_notice"
                style="@style/MenuItemLayoutStyle" >

                <TextView
                    style="@style/MenuItemTextViewStyle"
                    android:text="@string/fragment_menu_title_notice" />
                <net.oschina.gitapp.widget.BadgeView
                    android:id="@+id/menu_item_notice_badgeView"
                    style="@style/BadgeView_style" />
            </LinearLayout>
            
            <include layout="@layout/horizontal_divider_view"/>

            <LinearLayout
                android:id="@+id/menu_item_setting"
                style="@style/MenuItemLayoutStyle" >

                <TextView
                    style="@style/MenuItemTextViewStyle"
                    android:text="@string/fragment_menu_title_setting" />
            </LinearLayout>
            
            <include layout="@layout/horizontal_divider_view"/>

            <LinearLayout
                android:id="@+id/menu_item_exit"
                style="@style/MenuItemLayoutStyle" >

                <TextView
                    style="@style/MenuItemTextViewStyle"
                    android:text="@string/fragment_menu_title_exit" />
            </LinearLayout>
        </LinearLayout>
        <include layout="@layout/horizontal_divider_view"/>
    </LinearLayout>

</ScrollView>