<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_login_logo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dip"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:drawableLeft="@drawable/icon_login_account"
            android:drawablePadding="10dip"
            android:ems="10"
            android:hint="@string/login_account_hint"
            android:singleLine="true" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:layout_marginTop="20dip"
            android:drawableLeft="@drawable/icon_login_pass"
            android:drawablePadding="10dip"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:layout_marginTop="35dip"
            android:background="@drawable/btn_style_login"
            android:enabled="false"
            android:padding="10dip"
            android:text="@string/login_title"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>